react and webpack setup

--- a/package.json
+++ b/package.json
@@ -2,15 +2,70 @@
   "name": "better-cv",
   "version": "0.0.0",
   "private": true,
+  "main": "server/bin/www",
   "scripts": {
-    "start": "node ./server/bin/www"
+    "start": "npm-run-all --parallel client server",
+    "server": "nodemon",
+    "start-debug": "npm-run-all --parallel client debug",
+    "debug": "nodemon --inspect",
+    "bootstrap": "node server/bootstrap.js",
+    "client": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
+    "migrate": "node server/bootstrap.js",
+    "migrate:up": "node server/migrate.js up",
+    "repl": "node server/repl",
+    "clean": "node build-scripts/clean.js",
+    "copy:images": "copyfiles -f client/app/images/* client/dist/images",
+    "copy:assets": "copyfiles -f client/app/assets/* client/dist/assets",
+    "publish": "node build-scripts/publish.js",
+    "prod-build:webpack": "node --max_old_space_size=4096 node_modules/.bin/webpack --config webpack.production.config.js",
+    "prod-build:sass": "node build-scripts/build-sass.js",
+    "prod-build:js": "npm-run-all --parallel prod-build:webpack*",
+    "prod-build": "npm-run-all -p prod-build:js prod-build:sass -s copy:*",
+    "prod": "npm-run-all prod-build publish",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-redux-toastr": "^7.6.5",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "require-directory": "^2.1.1",
+    "sequelize": "^6.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "copyfiles": "^2.3.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
