--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux-toastr": "^7.6.5",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "require-directory": "^2.1.1",
     "sequelize": "^6.3.0"
   },
