--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "require-directory": "^2.1.1",
-    "sequelize": "^6.3.0"
+    "sequelize": "^6.3.0",
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -57,13 +58,16 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
     "copyfiles": "^2.3.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
+    "mocha": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
+    "supertest": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
