--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
     "prod-build:js": "npm-run-all --parallel prod-build:webpack*",
     "prod-build": "npm-run-all -p prod-build:js prod-build:sass -s copy:*",
     "prod": "npm-run-all prod-build publish",
+    "prod-start": "node server/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "autoprefixer": "^9.8.4",
+    "chalk": "^4.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
+    "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
