--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^4.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv-extended": "^2.8.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
