--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "require-directory": "^2.1.1",
+    "sass-loader": "^9.0.2",
     "sequelize": "^6.3.0",
     "tailwindcss": "^1.4.6"
   },
