local database setup and logger

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ NODE_ENV = development
 PORT = 3000
 
 DEV_URL = http://localhost:5000/
+
+# DATABASE
+DATABASE_HOST = "localhost"
+DATABASE_NAME = "bettercv"
+DATABASE_USERNAME = "betterapps"
+DATABASE_PASSWORD = ""
