sequelize migration setup

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT = 3000
 DEV_URL = http://localhost:5000/
 
 # DATABASE
-DATABASE_HOST = "localhost"
-DATABASE_NAME = "bettercv"
-DATABASE_USERNAME = "betterapps"
-DATABASE_PASSWORD = ""
+DB_HOST = "localhost"
+DB_NAME = "bettercv"
+DB_USER = "betterapps"
+DB_PASSWORD = ""
