--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mocha": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
+    "sequelize-cli": "^6.2.0",
     "style-loader": "^1.2.1",
     "supertest": "^4.0.2",
     "webpack": "^4.43.0",
