migrations added and user table created

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DEV_URL = http://localhost:5000/
 # DATABASE
 DB_HOST = "localhost"
 DB_NAME = "bettercv"
-DB_USER = "betterapps"
+DB_USER = "postgres"
 DB_PASSWORD = ""
